# Kasia

./: .env.production  .env.staging  .gitignore  .gitmodules  README.md  biome.json  index.html  note.md  package-lock.json  package.json  prv_README.md  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.browser.config.ts
.github/workflows/: build.yml  pr.yml
public/: _headers
scripts/: bump-tauri-version.cjs  run-vite-with-env.cjs  with-zsh-env.sh
src/: App.tsx  AppRoutes.tsx  index.css  init.ts  main.tsx  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ContactCard.tsx  ContactMenu.tsx  EditNicknamePopover.tsx  LoadingMessages.tsx  MnemonicEntry.tsx  ModeSelector.tsx  NetworkSelector.tsx  NewChatForm.tsx  PriorityFeeSelector.tsx  QrScanner.tsx  SendPaymentPopup.tsx
src/config/: constants.ts  protocol.ts
src/containers/: BroadcastsContainer.tsx  DirectsContainer.tsx  MessagesSection.tsx  MessengerContainer.tsx  MessengerProvider.tsx  WalletLockedFlowContainer.tsx
src/hooks/: useGlobalStore.ts  useMessengerRouting.ts  useMobileViewManager.ts  useOrchestrator.ts
src/service/: account-service.ts  block-processor-service.ts  camera-permission-service.ts  conversation-manager-service.ts  historical-syncer.ts  import-export-service.ts  kaspa-client.ts  sender-and-acceptance-resolution-service.ts  storage-encryption.ts  transaction-generator.ts  upload-file-service.ts  wallet-storage-service.ts
src/store/: blocklist.store.ts  broadcast.store.ts  db.store.ts  featureflag.store.ts  live.store.ts  message-composer.store.ts  messaging.store.ts  network.store.ts  session.store.ts  (+3 more)
(+136 files in other folders)
