[package]
name = "app"
version = "0.6.1"
description = "Kasia"
authors = ["you"]
license = "ISC"
repository = "https://github.com/K-Kluster/Kasia/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-biometry = {git= "https://github.com/IzioDev/tauri-plugin-biometry.git", branch="main"}
tauri-plugin-app-events = {git = "https://github.com/IzioDev/tauri-plugin-app-events.git", branch="main"}
rand = "0.9.2"
tokio = {version = "1.47.1", features = ["time"] }
tauri-plugin-os = "2"
tauri-plugin-opener = "2"

# taken from default configuration at https://tauri.app/concept/size/
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
debug = 1               # keep line info
split-debuginfo = "packed"  # better for Apple

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
